--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "car-rent-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://YuliiaK1.github.io/morent-car-rent",
+  "homepage": "https://morent-car.herokuapp.com",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
